[tool.poetry]
name = "blockmate-assignment"
version = "0.1.0"
description = "Case Study Software Engineer"
authors = ["Anton Cornak <a.cornak@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "blockmate_assignment" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
